# Proyecto_taller

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
docs/diagrams/: git_rustico.puml
scripts/: fast-forward-merge.sh  status.sh
src/: blob.rs  branch.rs  cat_file.rs  commit.rs  compressor.rs  config.rs  diff.rs  git_object.rs  glade1.glade~  hash.rs  ignore.rs  index.rs  init.rs  lib.rs  log_file.rs  ls_file.rs  ls_tree.rs  main.rs  merge.rs  network_commands.rs  pull_request.rs  rebase.rs  refs.rs  remote.rs  repo_paths.rs  repository_access_permission.rs  server.rs  server_paths.rs  show_ref.rs  tag.rs  tree.rs  user.rs  utils.rs
src/files/: index_file_info.rs  mod.rs  object_type.rs
src/git_errors/: command_error.rs  errors.rs  mod.rs  parse_error.rs
src/gui/: glade1.glade  glade1.glade~  gui2.rs  mod.rs  send_event.rs  ui_event.rs
src/http/: http_error.rs  http_protocol.rs  http_response.rs  mod.rs
src/protocol/: pack_file.rs  pkt_line.rs
tests/commit/: HEAD  index_1_a  index_1_b
tests/commit/refs/heads/: master
tests/data/One_file_test/: not_staged
tests/data/One_file_test/.git-rustico/: HEAD  index
tests/data/fetch/.git-rustico/: index
tests/data/fetch2/.git-rustico/: index
tests/data/fetchComparativo/: coparativa
tests/data/fetchComparativoCambios/: coparativa
tests/data/file_info/: do_not_modify.txt
tests/demo/: DEMO_.txt  demo_ls_tree.txt  demo_remote.txt  http_server_requests  readme.md
tests/tests_files/.git_pruebas/: Index_prueba_fetch.txt  Index_prueba_fetch_muchos.txt
(+4 files in other folders)
